# Extended-Trace-x64dbg

./: .gitignore  CMakeLists.txt  README.md
src/: dialog.cpp  dialog.h  pedumper.cpp  pedumper.h  plugin.cpp  plugin.h  pluginmain.cpp  pluginmain.h  tracer.cpp  tracer.h
